# RemoteAccessServer

./: .gitignore  README.md
client/: CMakeLists.txt  CMakePresets.json  CMakePresets.old.json  helpers.c  helpers.h  http_parser.c  http_parser.h  remote_client.c  socks5_proxy.c  socks5_proxy.h  ssh_client_impl.c  ssh_client_impl.h  ssh_server_impl.c  ssh_server_impl.h  vcpkg.json
webserver/: .gitignore  dashboard.css  deleteinfos.cgi  dologin.cgi  getinfos.cgi  getmore.cgi  index.cgi  index.html  info.cgi  infofile.cgi  lighttpd.conf  login.cgi  login.html  login.py  more.cgi  more.html  releaseinfos.cgi  schema.sql  session_helper.py  setinfo.cgi  setup.sh
webserver/api/: deleteinfos.cgi  dologin.cgi  getinfos.cgi  getmore.cgi  info.cgi  infofile.cgi  setinfo.cgi
webserver/core/: db_connection.py  login.py  session_helper.py
webserver/html/: index.html  login.html
